make some changes in style like change theme color and add a new tab inprogress tab and add it's logic encoutered some bugs and fix it also in saving

--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
 			<div class="tasks"></div>
 		</div>
 
+		<div class="inprogress">
+			<div class="header">
+				<h1><i class='bx bx-refresh'></i> inprogress</h1>
+			</div>
+			<div class="tasks"></div>
+		</div>
+
 		<div class="done">
 			<div class="header">
 				<h1><i class="bx bxs-calendar-check"></i>Done</h1>
